--- a/arch/arm/boot/dts/orion5x-netgear-wnr854t.dts
+++ b/arch/arm/boot/dts/orion5x-netgear-wnr854t.dts
@@ -81,19 +81,19 @@
 			port@0 {
 				reg = <0>;
 				label = "lan3";
-				phy-handle = <&ethphy0>;
+				phy-handle = <&lan3phy>;
 			};
 
 			port@1 {
 				reg = <1>;
 				label = "lan4";
-				phy-handle = <&ethphy1>;
+				phy-handle = <&lan4phy>;
 			};
 
 			port@2 {
 				reg = <2>;
 				label = "wan";
-				phy-handle = <&ethphy2>;
+				phy-handle = <&wanphy>;
 			};
 
 			port@3 {
@@ -104,13 +104,13 @@
 			port@5 {
 				reg = <5>;
 				label = "lan1";
-				phy-handle = <&ethphy5>;
+				phy-handle = <&lan1phy>;
 			};
 
 			port@7 {
 				reg = <7>;
 				label = "lan2";
-				phy-handle = <&ethphy7>;
+				phy-handle = <&lan2phy>;
 			};
 		};
 	};
@@ -154,7 +154,7 @@
 &mdio {
 	status = "okay";
 
-	ethphy0: ethernet-phy@0 {
+	lan3phy: ethernet-phy@0 {
 		compatible = "ethernet-phy-id0141.0cb0",
 			     "ethernet-phy-ieee802.3-c22",
 			     "marvell,88E1121R"; /* (port 1)*/
@@ -162,7 +162,7 @@
 		reg = <0>;
 	};
 
-	ethphy1: ethernet-phy@1 {
+	lan4phy: ethernet-phy@1 {
 		compatible = "ethernet-phy-id0141.0cb0",
 			     "ethernet-phy-ieee802.3-c22",
 			     "marvell,88E1121R"; /* (port 2)*/
@@ -170,7 +170,7 @@
 		reg = <1>;
 	};
 
-	ethphy2: ethernet-phy@2 {
+	wanphy: ethernet-phy@2 {
 		compatible = "ethernet-phy-id0141.0cb0",
 			     "ethernet-phy-ieee802.3-c22",
 			     "marvell,88E1121R"; /* (port 1)*/
@@ -178,7 +178,7 @@
 		reg = <2>;
 	};
 
-	ethphy5: ethernet-phy@5 {
+	lan1phy: ethernet-phy@5 {
 		compatible = "ethernet-phy-id0141.0cb0",
 			     "ethernet-phy-ieee802.3-c22",
 			     "marvell,88E1112";
@@ -186,7 +186,7 @@
 		marvell,reg-init = <3 16 0 0x1777 3 17 0 0x15>;
 	};
 
-	ethphy7: ethernet-phy@7 {
+	lan2phy: ethernet-phy@7 {
 		compatible = "ethernet-phy-id0141.0cb0",
 			     "ethernet-phy-ieee802.3-c22",
 			     "marvell,88E1112";
